syntax = "proto3";

package resources.accounts;

import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/accounts;accounts";

message Account {
  uint64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  string username = 4 [(validate.rules).string.max_len = 24];
  string license = 5 [(validate.rules).string.max_len = 64];
  bool enabled = 6;
  optional int32 last_char = 7 [(validate.rules).int32.gt = 0];
}

message Character {
  bool available = 1;
  string group = 2;
  resources.users.User char = 3; // @gotags: alias:"user"
}
